# judge-core

./: .gitignore  .travis.yml  CMakeLists.txt  CMakeTests.cmake  CMakeVersion.cmake  FindC99.cmake  README.md  Vagrantfile  bootstrap.sh  config.h.in  main.c
common/: common.h  params.h
compilers/: CMakeLists.txt  compiler.c  compiler.cc  compiler.h  compiler_c.c  compiler_c.cc  compiler_c.h  compiler_cc.c  compiler_cc.cc  compiler_cc.h  compiler_java.c  compiler_java.cc  compiler_java.h  config.h.in
test_resources/: test_compile_error.cc  test_compile_error.java  test_pass.java
tests/: CMakeLists.txt  compiler_c_test.c  compiler_c_test.cc  compiler_cc_test.c  compiler_cc_test.cc  compiler_java_test.c  compiler_java_test.cc  config.h.in
