INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR})
INCLUDE_DIRECTORIES(${CMAKE_BINARY_DIR})
ADD_EXECUTABLE(compiler_c_test "compiler_c_test.c")
ADD_EXECUTABLE(compiler_cc_test "compiler_cc_test.c")
ADD_EXECUTABLE(compiler_java_test "compiler_java_test.c")
TARGET_LINK_LIBRARIES(compiler_c_test compilers)
TARGET_LINK_LIBRARIES(compiler_cc_test compilers)
TARGET_LINK_LIBRARIES(compiler_java_test compilers)
